Add bpf filter