@@ -66,12 +66,12 @@ SPDX-License-Identifier: MIT OR Apache-2.0
         <jna.version>5.10.0</jna.version>
         <jmh.version>1.33</jmh.version>
 
-        <mockito.version>4.0.0</mockito.version>
-        <junit.jupiter.api.version>5.8.1</junit.jupiter.api.version>
+        <mockito.version>4.1.0</mockito.version>
+        <junit.jupiter.api.version>5.8.2</junit.jupiter.api.version>
         <junit.jupiter.engine.version>5.6.1</junit.jupiter.engine.version>
-        <junit.platform.runner.version>1.8.1</junit.platform.runner.version>
+        <junit.platform.runner.version>1.8.2</junit.platform.runner.version>
 
-        <fmt.maven.plugin.version>2.12</fmt.maven.plugin.version>
+        <fmt.maven.plugin.version>2.13</fmt.maven.plugin.version>
         <jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
         <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
         <sonar.maven.plugin.version>3.9.1.2184</sonar.maven.plugin.version>
@@ -321,9 +321,6 @@ SPDX-License-Identifier: MIT OR Apache-2.0
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
-                    <configuration>
-                        <argLine>-Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
